[package]
name = "procman"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = {version = "1.39.3", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = {version="0.1", features=["sync"]}

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]